@@ -42,6 +42,24 @@
         </remarks>
       </Docs>
     </Member>
+    <Member MemberName="GetNode">
+      <MemberSignature Language="C#" Value="public Gtk.ITreeNode GetNode (Gtk.TreePath path);" />
+      <MemberType>Method</MemberType>
+      <ReturnValue>
+        <ReturnType>Gtk.ITreeNode</ReturnType>
+      </ReturnValue>
+      <Parameters>
+        <Parameter Name="path" Type="Gtk.TreePath" />
+      </Parameters>
+      <Docs>
+        <summary>Returns a node given a <see cref="T:Gtk.TreePath" />.</summary>
+        <param name="path">The path to look up.</param>
+        <remarks>
+          Looks up the node corresponding to <paramref name="path" /> and returns it,
+	  or null if the node cannot be found.
+        </remarks>
+      </Docs>
+    </Member>
     <Member MemberName="RemoveNode">
       <MemberSignature Language="C#" Value="public void RemoveNode (Gtk.ITreeNode node);" />
       <MemberType>Method</MemberType>
