@@ -1,3 +1,7 @@
+2003-11-18  Peter Williams  <peter@newton.cx>
+ 
+ 	* en/Gtk/NodeStore.xml: Document new GetNode functions.
+ 
 2003-11-17  John Luke  <jluke@cfl.rr.com>
 
 	* en/Gtk/Socket.xml: documented
